# SomeRpg

./: CMakeLists.txt  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  GameStateMachine.cpp  GameStateMachine.h  InputHandler.cpp  InputHandler.h  LoaderParams.cpp  LoaderParams.h  MenuState.cpp  MenuState.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  README.md  SDLGameObject.cpp  SDLGameObject.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
